@@ -18,8 +18,16 @@ Las siguientes macros están disponibles:
 <li>_alert_description_: Descripción de la alerta.</li>
 <li>_alert_threshold_: Umbral de la alerta.</li>
 <li>_alert_times_fired_: Número de veces que se ha disparado la alerta.</li>
+<li>_module_: Nombre del módulo
+<li>_moduledescription_: Descripcion del modulo.
+<li>_alert_name_: Nombre de la alerta.
+<li>_alert_priority_: Prioridad de la alerta.
+<li>_id_agent_: ID del agente, util para construir URL de acceso a la consola de Pandora.
+<li>_id_alert_: ID de la alerta, util para correlar la alerta en herramientas de terceros.
+
 </ul>
 <p>
 </p>
-Ejemplo: Error en el agente _agent_: _alert_description_.
+Ejemplo: Error en el agente _agent_: _alert_description_ 
 </p>
+
